; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_sprintf_cast.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_sprintf_cast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_string_buffer = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@WINED3D_DATA_FLOAT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"floatBitsToInt(%s)\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"floatBitsToUint(%s)\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"uintBitsToFloat(%s)\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"intBitsToFloat(%s)\00", align 1
@.str.5 = private unnamed_addr constant [33 x i8] c"Unhandled cast from %#x to %#x.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_string_buffer*, i8*, i32, i32)* @shader_glsl_sprintf_cast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shader_glsl_sprintf_cast(%struct.wined3d_string_buffer* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.wined3d_string_buffer*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.wined3d_string_buffer* %0, %struct.wined3d_string_buffer** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %8, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %4
  %13 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @string_buffer_sprintf(%struct.wined3d_string_buffer* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %14)
  br label %61

16:                                               ; preds = %4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* @WINED3D_DATA_FLOAT, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %32

20:                                               ; preds = %16
  %21 = load i32, i32* %7, align 4
  switch i32 %21, label %30 [
    i32 131, label %22
    i32 130, label %26
    i32 129, label %26
    i32 128, label %26
  ]

22:                                               ; preds = %20
  %23 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @string_buffer_sprintf(%struct.wined3d_string_buffer* %23, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  br label %61

26:                                               ; preds = %20, %20, %20
  %27 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @string_buffer_sprintf(%struct.wined3d_string_buffer* %27, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i8* %28)
  br label %61

30:                                               ; preds = %20
  br label %31

31:                                               ; preds = %30
  br label %32

32:                                               ; preds = %31, %16
  %33 = load i32, i32* %8, align 4
  %34 = icmp eq i32 %33, 128
  br i1 %34, label %35, label %43

35:                                               ; preds = %32
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* @WINED3D_DATA_FLOAT, align 4
  %38 = icmp eq i32 %36, %37
  br i1 %38, label %39, label %43

39:                                               ; preds = %35
  %40 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %41 = load i8*, i8** %6, align 8
  %42 = call i32 @string_buffer_sprintf(%struct.wined3d_string_buffer* %40, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i8* %41)
  br label %61

43:                                               ; preds = %35, %32
  %44 = load i32, i32* %8, align 4
  %45 = icmp eq i32 %44, 131
  br i1 %45, label %46, label %54

46:                                               ; preds = %43
  %47 = load i32, i32* %7, align 4
  %48 = load i32, i32* @WINED3D_DATA_FLOAT, align 4
  %49 = icmp eq i32 %47, %48
  br i1 %49, label %50, label %54

50:                                               ; preds = %46
  %51 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %52 = load i8*, i8** %6, align 8
  %53 = call i32 @string_buffer_sprintf(%struct.wined3d_string_buffer* %51, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i8* %52)
  br label %61

54:                                               ; preds = %46, %43
  %55 = load i32, i32* %8, align 4
  %56 = load i32, i32* %7, align 4
  %57 = call i32 @FIXME(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.5, i64 0, i64 0), i32 %55, i32 %56)
  %58 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %59 = load i8*, i8** %6, align 8
  %60 = call i32 @string_buffer_sprintf(%struct.wined3d_string_buffer* %58, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %59)
  br label %61

61:                                               ; preds = %54, %50, %39, %26, %22, %12
  ret void
}

declare dso_local i32 @string_buffer_sprintf(%struct.wined3d_string_buffer*, i8*, i8*) #1

declare dso_local i32 @FIXME(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
